# Basic-OpenGL-Renderer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: IndexBuffer.h  Node.h  Renderable.h  Renderer.h  Scene.h  Shader.h  Texture.h  VertexArray.h  VertexBuffer.h  VertexBufferLayout.h
res/shaders/: quad.glsl  shader.glsl  shaderBatch.glsl
src/: IndexBuffer.cpp  Node.cpp  Renderable.cpp  Renderer.cpp  Scene.cpp  Shader.cpp  Texture.cpp  VertexArray.cpp  VertexBuffer.cpp  main.cpp
src/examples/Quad/: Quad.cpp  Quad.h  QuadUtils.h
src/tests/: Test.cpp  Test.h  TestClearColor.cpp  TestClearColor.h  TestTexture2D.cpp  TestTexture2D.h  TestTexture2DBatch.cpp  TestTexture2DBatch.h
